# stark_micropolar

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp  paths.h  scene_helper.h  utils.h
paraview/: micropolar.py
stark/: CMakeLists.txt
stark/src/core/: Callbacks.h  NewtonsMethod.cpp  NewtonsMethod.h  Settings.cpp  Settings.h  Stark.cpp
stark/src/models/: Simulation.cpp  Simulation.h  fem_elements.h  fem_quadrature.cpp  fem_quadrature.h  fem_symx_types.h  fem_types.h  matrix_wrapper.h  symx_quaternion.cpp  symx_quaternion.h
stark/src/models/deformables/: Deformables.cpp  Deformables.h  deformables_energies_include.h
stark/src/models/deformables/point/: EnergyPrescribedPositions.cpp  EnergyPrescribedPositions.h
stark/src/models/deformables/surface/: EnergyDiscreteShells.cpp  EnergyDiscreteShells.h  EnergyMicropolarShell.cpp  EnergyMicropolarShell.h  EnergyTriangleStrainKim20.cpp  EnergyTriangleStrainKim20.h  EnergyTriangleStrainWen23.cpp  EnergyTriangleStrainWen23.h
stark/src/utils/: blends.cpp  mesh_generators.cpp  mesh_generators.h  mesh_utils.cpp  mesh_utils.h
